--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,35 @@ description = "Lightweight type-hint based Dependency Injection container with a
 authors = ["Jomar Júnior de Souza Pereira <jomarjunior@poli.ufrj.br>"]
 readme = "README.md"
 license = "MIT"
+homepage = "https://github.com/JomarJunior/miraveja-di"
+repository = "https://github.com/JomarJunior/miraveja-di"
+documentation = "https://github.com/JomarJunior/miraveja-di#readme"
+keywords = [
+    "dependency-injection",
+    "di",
+    "ioc",
+    "inversion-of-control",
+    "dependency-container",
+    "auto-wiring",
+    "type-hints",
+    "fastapi",
+    "python"
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Libraries :: Application Frameworks",
+    "Typing :: Typed",
+]
 packages = [
     { include = "miraveja_di", from = "src" }
 ]
